# smart-sort

./: .clang-format  .clang-tidy  .clangd  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  Justfile  README.md  flake.nix
.github/workflows/: cpp-build.yml
scripts/: run-tidy.sh
smart-sort/.github/workflows/: cpp-build.yml
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
tests/: CMakeLists.txt  test_add.cpp
